# mllm-prompt-template

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
example/: example.py  mllm.py  run.sh
mllm_prompt_template/: prompt.py  template.py
